fixing layout issue

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -29,3 +29,7 @@ h1 {
     width: 75%;
     padding-top: 8px;
 }
+
+.white {
+  color: white;
+}
